[gd_scene load_steps=4 format=3 uid="uid://b8hqwu01nlrdh"]

[ext_resource type="Script" path="res://BgLayerPreview.gd" id="1_s3p3t"]
[ext_resource type="Script" path="res://sky_layer_group.gd" id="3_k3ow5"]

[sub_resource type="PlaneMesh" id="PlaneMesh_6vxbk"]
size = Vector2(1, 1)

[node name="BgLayers" type="Node3D"]
script = ExtResource("1_s3p3t")

[node name="Sky_BG_Front" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.499719)
mesh = SubResource("PlaneMesh_6vxbk")
skeleton = NodePath("../../..")
script = ExtResource("3_k3ow5")
side = 3

[node name="Sky_BG_Right" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 0.499719, 0, 0)
mesh = SubResource("PlaneMesh_6vxbk")
script = ExtResource("3_k3ow5")
side = 2

[node name="Sky_BG_Back" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0, 0.499719)
mesh = SubResource("PlaneMesh_6vxbk")
script = ExtResource("3_k3ow5")
side = 1

[node name="Sky_BG_Left" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -0.499719, 0, 0)
mesh = SubResource("PlaneMesh_6vxbk")
script = ExtResource("3_k3ow5")
